implement confirm delete

--- a/app/views/partials/elements/work.html
+++ b/app/views/partials/elements/work.html
@@ -13,11 +13,11 @@
       <% } %>
 
       <% if (viewer && viewer.isAdmin) { %>
-        {# <div class="delete"><i class="bi_editorial-trash-a-l"></i></div> #}
-        <div class="confirm">
+        <div class="delete"><i class="bi_editorial-trash-a-l"></i></div>
+        <div class="confirm delete-confirm hide">
           <span>borrar?</span>
-          <i class="bi_interface-box-tick" style="display: inline;"></i>
-          <i class="bi_interface-box-cross" style="display: inline;"></i>
+          <i class="bi_interface-box-tick delete-force" style="display: inline;"></i>
+          <i class="bi_interface-box-cross cancel" style="display: inline;"></i>
         </div>
       <% } %>
 
