--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -5,7 +5,45 @@
 	<!-- SLIDER HOME -->
 	<div class="grid-container">
 		<div class="grid-100">
-			<div class="slider"></div>
+			<!-- <div class="slider"></div> -->
+
+			<!-- ********************************************************************
+				$ SLIDER
+			********************************************************************* -->
+			<!-- <section class="slider-small">
+				<div class="slider-small__items">
+					<div class="slider-small__item js-slide"><img src="/img/slide-large1.jpg"></div>
+					<div class="slider-small__item js-slide"><img src="/img/slide-large2.jpg"></div>
+					<div class="slider-small__item js-slide"><img src="/img/slide-large3.jpg"></div>
+					<div class="slider-small__item js-slide"><img src="/img/slide-large4.jpg"></div>
+					<div class="slider-small__item js-slide"><img src="/img/slide-large5.jpg"></div>
+				</div>
+				<div class="slider-small__nav">
+					<i class="slider-small__nav__item js-slideNavItem active fa fa-circle"></i>
+					<i class="slider-small__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-small__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-small__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-small__nav__item js-slideNavItem fa fa-circle"></i>
+				</div>
+			</section> -->
+
+			<section class="slider-large">
+				<div class="slider-large__items">
+					<div class="slider-large__item js-slide"><img src="/img/slide-large1.jpg"></div>
+					<div class="slider-large__item js-slide"><img src="/img/slide-large2.jpg"></div>
+					<div class="slider-large__item js-slide"><img src="/img/slide-large3.jpg"></div>
+					<div class="slider-large__item js-slide"><img src="/img/slide-large4.jpg"></div>
+					<div class="slider-large__item js-slide"><img src="/img/slide-large5.jpg"></div>
+				</div>
+				<div class="slider-large__nav">
+					<i class="slider-large__nav__item js-slideNavItem active fa fa-circle"></i>
+					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
+				</div>
+			</section>
+
 		</div>
 	</div>
 
@@ -168,6 +206,9 @@
 
 
 {% block scripts %}
+
+	<script src="/hammer.min.js"></script>
+	<script src="/slider.js"></script>
 
 	<script>
 		$(function(){
