--- a/app/styles/filters.styl
+++ b/app/styles/filters.styl
@@ -1,4 +1,4 @@
-/*------------------------------------*
+l/*------------------------------------*
 	$ SELECT
 *------------------------------------*/
 .am-Select
@@ -23,6 +23,8 @@
 	border solid 1px #ddd
 	border-radius 4px
 	&-item
+		&.selected
+			background #eee
 		&:not(:first-child)
 			border-top solid 1px #ddd
 		&.closed
