--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -5,29 +5,31 @@
 	<!-- SLIDER HOME -->
 	<div class="grid-container">
 		<div class="grid-100">
-			<!-- <div class="slider"></div> -->
 
 			<!-- ********************************************************************
 				$ SLIDER
 			********************************************************************* -->
-			<!-- <section class="slider-small">
-				<div class="slider-small__items">
-					<div class="slider-small__item js-slide"><img src="/img/slide-large1.jpg"></div>
-					<div class="slider-small__item js-slide"><img src="/img/slide-large2.jpg"></div>
-					<div class="slider-small__item js-slide"><img src="/img/slide-large3.jpg"></div>
-					<div class="slider-small__item js-slide"><img src="/img/slide-large4.jpg"></div>
-					<div class="slider-small__item js-slide"><img src="/img/slide-large5.jpg"></div>
+			<section class="slider">
+				<div class="slider-items">
+					<!-- <div class="slider-item js-slide"><img src="/img/slide-large1.jpg"></div> -->
+					<div class="slider-item js-slide">
+						<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
+					</div>
+					<div class="slider-item js-slide"><img src="/img/slide-large2.jpg"></div>
+					<div class="slider-item js-slide"><img src="/img/slide-large3.jpg"></div>
+					<div class="slider-item js-slide"><img src="/img/slide-large4.jpg"></div>
+					<div class="slider-item js-slide"><img src="/img/slide-large5.jpg"></div>
 				</div>
-				<div class="slider-small__nav">
-					<i class="slider-small__nav__item js-slideNavItem active fa fa-circle"></i>
-					<i class="slider-small__nav__item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-small__nav__item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-small__nav__item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-small__nav__item js-slideNavItem fa fa-circle"></i>
+				<div class="slider-nav">
+					<i class="slider-nav-item js-slideNavItem active fa fa-circle"></i>
+					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 				</div>
-			</section> -->
+			</section>
 
-			<section class="slider-large">
+			<!-- <section class="slider-large">
 				<div class="slider-large__items">
 					<div class="slider-large__item js-slide"><img src="/img/slide-large1.jpg"></div>
 					<div class="slider-large__item js-slide"><img src="/img/slide-large2.jpg"></div>
@@ -42,7 +44,7 @@
 					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
 				</div>
-			</section>
+			</section> -->
 
 		</div>
 	</div>
