--- a/app/styles/buttons.styl
+++ b/app/styles/buttons.styl
@@ -14,6 +14,7 @@
 	color white
 	// border solid 1px #979797
 	box-shadow 1px 2px 1px 0 rgba(black, .5)
+	cursor pointer
 	i
 		font-size: 1.25em;
 
