--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -85,9 +85,17 @@
 			<p class="profile-title">Sobre el artista</p>
 			<p class="profile-desc">{{profile.biography}}</p>
 			<div class="profile-desc u-margin-top-20">
-				<a href="{{profile.facebook}}"><i class="bi_logo-facebook"></i></a>
+<!-- 				<a href="{{profile.facebook}}"><i class="bi_logo-facebook"></i></a>
 				<a href="{{profile.twitter}}"><i class="bi_logo-twitter"></i></a>
-				<a href="{{profile.instagram}}"><i class="bi_logo-instagram"></i></a>
+				<a href="{{profile.instagram}}"><i class="bi_logo-instagram"></i></a> -->
+				<a href="{{profile.facebook}}"><i class="fa fa-facebook"></i></a>
+				<a href="{{profile.twitter}}"><i class="fa fa-twitter"></i></a>
+				<a href="{{profile.instagram}}"><i class="fa fa-instagram"></i></a>
+				<a href="{{profile.behance}}"><i class="fa fa-behance"></i></a>
+				<a href="{{profile.tumblr}}"><i class="fa fa-tumblr"></i></a>
+				<a href="{{profile.wordpress}}"><i class="fa fa-wordpress"></i></a>
+				<a href="{{profile.vimeo}}"><i class="fa fa-vimeo"></i></a>
+				<a href="{{profile.dribbble}}"><i class="fa fa-dribbble"></i></a>
 			</div>
 		</div>
 		<div class="grid-100">
@@ -98,7 +106,7 @@
 			</p>
 			<div class="u-separator"></div>
 		</div>
-		<div class="grid-100 grid-parent">
+		<div class="grid-100 grid-parent u-margin-top-10">
 			{% if owner %}
 			<p class="empty-profile-text  empty-message hide u-margin-top-30">Aún no tienes ninguna obra <br><br>
 				<a href="/user/{{user.username}}/work/add">Sube tu primera obra</a>
