remove work from collection

--- a/app/views/user/collection/index.html
+++ b/app/views/user/collection/index.html
@@ -103,7 +103,7 @@
 				},
 				items: {{works|json|safe}}
 			}
-			new APP.Viewer('work', $('.grid'), 'infinite', data);
+			new APP.Viewer('work', $('.grid'), 'infinite', data , {context: 'single-collection'});
 		});
 
 	$("#go-collection-modal").leanModal();
