--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -520,7 +520,7 @@
 
 					<div class="grid-100 mobile-grid-100">
 						<p class="title">Tags de la obra</p>
-						<input name='tags' class="input tags"  value="{{tags}}" required type="text"/>
+						<input name='tags' class="input tags"  value="{{tagsFormat}}" required type="text"/>
 						<div class="separator">
 							<span class="line"></span><span class="text">CARACTERÍSTICAS</span><span class="line"></span>
 						</div>
@@ -557,6 +557,7 @@
 {% endblock %}
 
 {% block scripts %}
+	<script src='/jquery.tagsinput.js' type='text/javascript'></script>
 	<script>
 		var owner = {{owner|json|safe}};
 		var products = {{products|json|safe}};
