--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -45,11 +45,15 @@
 					</div>
 				</div>
 			</div>
-			<div class="text">
-				<p class="am-navigation-text category-text">{{data.filters.currentCategory}}</p>
-				<p class="am-navigation-text order-text">{{data.filters.currentOrder}}</p>
-				<p class="am-navigation-text search-text hide">incas</p>
-				<p class="am-navigation-text featured-text hide">AM</p>
+			<div class="text" style="text-align: center;">
+				<!-- <p class="am-navigation-text category-text">{{data.filters.currentCategory}}</p> -->
+				<span class="am-navigation-text category-text">{{data.filters.currentCategory}}</span>
+				<!-- <span class="am-navigation-text"> > </span> -->
+				<!-- <p class="am-navigation-text order-text">{{data.filters.currentOrder}}</p> -->
+				<!-- <p class="am-navigation-text search-text hide">incas</p> -->
+				<span class="am-navigation-text search-text hide">incas</span>
+				<!-- <p class="am-navigation-text featured-text hide">AM</p> -->
+				<span class="am-navigation-text featured-text hide">AM</span>
 			</div>
 			<div class="filter right" data-state="closed">
 				<div class="am-Select">
