add account menu

--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -1,6 +1,16 @@
 {% extends '../../partials/base.html' %}
 {% block elements %}
 	<div class="am-profile">
+
+	  <div class="single-tabs" style="max-width: 580px; margin: auto;">
+	    <a href="http://localhost:3000/user/hanshavin/account" class="single-tab selected" style="padding: 10px;">
+	      <p style="padding: 5px;">Datos</p>
+	    </a>
+	    <a href="http://localhost:3000/user/hanshavin/account/password" class="single-tab" style="padding: 10px;">
+	      <p style="padding: 5px;">Password</p>
+	    </a>
+	  </div>
+
 		<div class="am-profile-box grid-container">
 			<form class="complete-form">
 				<div class="grid-100">
