add new field to complete-profile

--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -23,6 +23,11 @@
 					<input class="input" type="text" name='username' required placeholder="Ingresa tu usuario"/>
 				</div>
 
+				<div class="grid-100">
+					<p class="title">Nombre a mostrar publicamente</p>
+					<input class="input" type="text" value="" name='lastname' required placeholder="Ingresa tu nombre como artista o pseudónimo"/>
+				</div>
+
 				<div class="grid-50 mobile-grid-100">
 					<p class="title">Genero</p>
 					<select class="input select" name='gender' required>
