--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -4,10 +4,10 @@
 
 		<div class="single-tabs" style="max-width: 580px; margin: auto;">
 		  <a href="http://localhost:3000/user/hanshavin/account" class="single-tab" style="padding: 10px;">
-		    <p style="padding: 5px;">Datos</p>
+		    <p style="padding: 5px;">DATOS</p>
 		  </a>
 		  <a href="http://localhost:3000/user/hanshavin/account/password" class="single-tab selected" style="padding: 10px;">
-		    <p style="padding: 5px;">Password</p>
+		    <p style="padding: 5px;">PASSWORD</p>
 		  </a>
 		</div>
 
