--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -439,6 +439,34 @@ body
 		button
 			display table
 			margin auto
+	.invitation
+		height 348px
+		box-sizing: border-box;
+		display flex
+		background-size cover
+		background-position center center
+		padding 10px
+		.inner
+			margin auto
+			text-align center
+			p
+				color white
+				font-size 20px
+				font-family 'Montserrat', sans-serif
+				font-weight bold
+				line-height 1.25
+				text-shadow 0px 2px 4px rgba(black, .5)
+			a
+				letter-spacing 1.5px
+				background #277cea
+				color white
+				font-size 10px
+				font-family 'Montserrat', sans-serif
+				font-weight bold
+				padding 8px 40px
+				margin-top 20px
+				display inline-block
+				border-radius 100px
 
 
 /*------------------------------------*
