--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -11,7 +11,6 @@
 			********************************************************************* -->
 			<section class="slider">
 				<div class="slider-items">
-					<!-- <div class="slider-item js-slide"><img src="/img/slide-large1.jpg"></div> -->
 					<div class="slider-item js-slide">
 						<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
 					</div>
@@ -28,24 +27,6 @@
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 				</div>
 			</section>
-
-			<!-- <section class="slider-large">
-				<div class="slider-large__items">
-					<div class="slider-large__item js-slide"><img src="/img/slide-large1.jpg"></div>
-					<div class="slider-large__item js-slide"><img src="/img/slide-large2.jpg"></div>
-					<div class="slider-large__item js-slide"><img src="/img/slide-large3.jpg"></div>
-					<div class="slider-large__item js-slide"><img src="/img/slide-large4.jpg"></div>
-					<div class="slider-large__item js-slide"><img src="/img/slide-large5.jpg"></div>
-				</div>
-				<div class="slider-large__nav">
-					<i class="slider-large__nav__item js-slideNavItem active fa fa-circle"></i>
-					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
-					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
-				</div>
-			</section> -->
-
 		</div>
 	</div>
 
@@ -140,6 +121,17 @@
 		<div class="grid-100 grid-parent">
 			<div class="grid work-layout-discover">
 				<div class="grid-sizer"></div>
+
+				<div class="grid-item">
+				    <div class="artist-card">
+				    	<div class="invitation" style="background-image: url('/img/invitation.png');">
+				    		<div class="inner">
+				    			<p>Tú puedes ser el próximo</p>
+				    			<a href="#">UNETE</a>
+				    		</div>
+				    	</div>
+				    </div>
+				  </div>
 			</div>
 			<div class="am-search-result empty-message hide">
 				No se encontraron resultados
@@ -224,3 +216,55 @@
 	</script>
 
 {% endblock %}
+
+
+
+			<!-- <section class="slider-large">
+				<div class="slider-large__items">
+					<div class="slider-large__item js-slide"><img src="/img/slide-large1.jpg"></div>
+					<div class="slider-large__item js-slide"><img src="/img/slide-large2.jpg"></div>
+					<div class="slider-large__item js-slide"><img src="/img/slide-large3.jpg"></div>
+					<div class="slider-large__item js-slide"><img src="/img/slide-large4.jpg"></div>
+					<div class="slider-large__item js-slide"><img src="/img/slide-large5.jpg"></div>
+				</div>
+				<div class="slider-large__nav">
+					<i class="slider-large__nav__item js-slideNavItem active fa fa-circle"></i>
+					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
+					<i class="slider-large__nav__item js-slideNavItem fa fa-circle"></i>
+				</div>
+			</section> -->
+
+
+							      <!-- <a href="/user/cesarardiles">
+				        <div class="artist-card-info">
+				          <img src="http://res.cloudinary.com/arte-manifiesto/image/upload/w_150,h_150,q_70,d_am_avatar.jpg/avatars/avatar_cesarardiles.jpg">
+				          <div>
+				            <p class="name uppercase">CèsarArdiles</p>
+				            <p class="city">, </p>
+				            <p class="stats"><i class="bi_ecommerce-diamon"></i> 0</p>
+				          </div>
+				        </div>
+				      </a> -->
+				      <!-- <div class="artist-card-works">
+				            <a href="/user/cesarardiles/work/mujer" class="artist-card-work">
+				              <div style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/135007e7085979a7d5b41ce54c0e54d7.jpg')">
+				              </div>
+				            </a>
+				            <a href="/user/cesarardiles/work/mujer2" class="artist-card-work">
+				              <div style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/2de40e0d504f583cda7465979f958a98.jpg')">
+				              </div>
+				            </a>
+				            <a href="/user/cesarardiles/work/mujer3" class="artist-card-work">
+				              <div style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/f99687dd719c4e8bc6a39e946c3d9ef7.jpg')">
+				              </div>
+				            </a>
+				            <a href="/user/cesarardiles/work/ignacio" class="artist-card-work">
+				              <div style="background-image: url('http://res.cloudinary.com/arte-manifiesto/image/upload/w_120,h_120,c_fill/works/3fb5ed13afe8714a7e5d13ee506003dd.jpg')">
+				              </div>
+				            </a>
+				      </div> -->
+				      <!-- <div class="artist-card-follow">
+				          <button class="am-Follow-button">+ SEGUIR</button>
+				      </div> -->
