add reset password view

--- a/app/views/auth/reset.html
+++ b/app/views/auth/reset.html
@@ -6,15 +6,18 @@
 		<div class="am-register-box">
 			<img class="logo-img" src="/img/logo-small.png" />
 			<img class="logo-text" src="/img/logo-text-black.svg" />
-			<p class="title">Los genios usualmente olvidan las cosas por concentrarse en lo importante</p>
+			<p class="title">Ingresa tu nueva contraseña</p>
 			<br><br><br>
-			<input class="input" type="text" placeholder="E-mail"></input>
+			<input class="input" type="pasword" placeholder="nuevo password"></input>
+			<br><br>
+			<input class="input" type="pasword" placeholder="repetir password"></input>
+			<br><br>
 			<button class="button u-margin-top-10" data-color="green">
-				<a>RESETEAR MI PASSWORD</a>
+				<a>GUARDAR NUEVO PASSWORD</a>
 			</button>
-			<p class="change" style="text-align: right;"><a href="#">Ya Recorde mi Clave</a></p>
+			<!-- <p class="change" style="text-align: right;"><a href="#">Ya Recorde mi Clave</a></p>
 			<br><br><br><br><br><br>
-			<p class="change">¿Aún no tienes una cuenta? <a href="#">Regístrate</a></p>
+			<p class="change">¿Aún no tienes una cuenta? <a href="#">Regístrate</a></p> -->
 		</div>
 	</div>
 {% endblock %}
