--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -2,36 +2,74 @@
 
 {% block elements %}
 
-	<!-- SLIDER HOME -->
-	<div class="grid-container">
+	<!-- ********************************************************************
+		$ SLIDER
+	********************************************************************* -->
+	<div class="grid-container u-margin-top-20">
 		<div class="grid-100">
-
-			<!-- ********************************************************************
-				$ SLIDER
-			********************************************************************* -->
 			<section class="slider">
 				<div class="slider-items">
-					<div class="slider-item js-slide">
+					<!-- <div class="slider-item js-slide">
 						<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
-					</div>
-					<div class="slider-item js-slide"><img src="/img/slide-large2.jpg"></div>
-					<div class="slider-item js-slide"><img src="/img/slide-large3.jpg"></div>
+					</div> -->
+					<div class="slider-item js-slide"><img src="/img/slider/slider 1.png"></div>
+					<!-- <div class="slider-item js-slide"><img src="/img/slide-large2.jpg"></div> -->
+					<!-- <div class="slider-item js-slide"><img src="/img/slide-large3.jpg"></div>
 					<div class="slider-item js-slide"><img src="/img/slide-large4.jpg"></div>
-					<div class="slider-item js-slide"><img src="/img/slide-large5.jpg"></div>
+					<div class="slider-item js-slide"><img src="/img/slide-large5.jpg"></div> -->
 				</div>
-				<div class="slider-nav">
+				<!-- <div class="slider-nav">
 					<i class="slider-nav-item js-slideNavItem active fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
-				</div>
+				</div> -->
 			</section>
 		</div>
 	</div>
 
-	<!-- DARK MESSAGE -->
-	<div class="home-dark-message">
+
+	<!-- ********************************************************************
+		$ HOME GRID
+	********************************************************************* -->
+	<div class="grid-container">
+		<div class="grid-100 grid-parent">
+			<div class="home-grid">
+				<div class="home-grid-column">
+					<a href="#" class="home-grid-element">
+						<div class="cover"></div>
+						<img src="/img/slider/slider 2.png">
+					</a>
+					<a href="#" class="home-grid-element">
+						<div class="cover"></div>
+						<img src="/img/slider/slider 3.png">
+					</a>
+				</div>
+				<div class="home-grid-column tablet">
+					<a href="#" class="home-grid-element">
+						<div class="cover"></div>
+						<img src="/img/slider/slider 4.png">
+					</a>
+					<a href="#" class="home-grid-element">
+						<div class="cover"></div>
+						<img src="/img/slider/slider 5.png">
+					</a>
+				</div>
+				<div class="home-grid-column desktop">
+					<a href="#" class="home-grid-element">
+						<div class="cover"></div>
+						<img src="/img/slider/slider 6.png">
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<!-- ********************************************************************
+		$ DARK MESSAGE
+	********************************************************************* -->
+	<div class="home-dark-message u-margin-top-20">
 		<div class="grid-container">
 			<div class="grid-100">
 				<div class="inner">
@@ -43,8 +81,9 @@
 		</div>
 	</div>
 
-
-	<!-- CATEGORIAS -->
+	<!-- ********************************************************************
+		$ CATEGORIES
+	********************************************************************* -->
 	<div class="grid-container u-margin-top-30">
 		<div class="grid-100">
 			<p class="home-title">DESCUBRE POR CATEGORÍAS</p>
@@ -56,41 +95,49 @@
 			<div class="categories">
 				<div class="categorie-container">
 					<a href="#" class="categorie" style="background-image: url('img/categories/1 pintura.png');">
+						<div class="cover"></div>
 						<p>pintura</p>
 					</a>
 				</div>
 				<div class="categorie-container">
 					<a href="#" class="categorie" style="background-image: url('img/categories/2 arte urbano.png');">
+						<div class="cover"></div>
 						<p>arte</p>
 					</a>
 				</div>
 				<div class="categorie-container">
 					<a href="#" class="categorie" style="background-image: url('img/categories/3 dibujo.png');">
+						<div class="cover"></div>
 						<p>dibujo</p>
 					</a>
 				</div>
 				<div class="categorie-container">
 					<a href="#" class="categorie" style="background-image: url('img/categories/4 digital.png');">
+						<div class="cover"></div>
 						<p>digital</p>
 					</a>
 				</div>
 				<div class="categorie-container">
 					<a href="#" class="categorie" style="background-image: url('img/categories/5 collage.png');">
+						<div class="cover"></div>
 						<p>collage</p>
 					</a>
 				</div>
 				<div class="categorie-container">
 					<a href="#" class="categorie" style="background-image: url('img/categories/6 collage.png');">
+						<div class="cover"></div>
 						<p>escultura</p>
 					</a>
 				</div>
 				<div class="categorie-container">
 					<a href="#" class="categorie" style="background-image: url('img/categories/7 collage.png');">
+						<div class="cover"></div>
 						<p>fotogragia</p>
 					</a>
 				</div>
 				<div class="categorie-container">
 					<a href="#" class="categorie" style="background-image: url('img/categories/8 collage.png');">
+						<div class="cover"></div>
 						<p>ilustracion</p>
 					</a>
 				</div>
@@ -110,7 +157,10 @@
 		</div>
 	</div>
 
-	<!-- ARTISTAS -->
+
+	<!-- ********************************************************************
+		$ ARTISTS
+	********************************************************************* -->
 	<div class="grid-container u-margin-top-30">
 		<div class="grid-100">
 			<p class="home-title">ARTISTAS DESTACADOS</p>
@@ -122,7 +172,7 @@
 			<div class="grid work-layout-discover">
 				<div class="grid-sizer"></div>
 
-				<div class="grid-item">
+					<div class="grid-item">
 				    <div class="artist-card">
 				    	<div class="invitation" style="background-image: url('/img/invitation.png');">
 				    		<div class="inner">
@@ -154,7 +204,10 @@
 		</div>
 	</div>
 
-	<!-- OBRAS -->
+
+	<!-- ********************************************************************
+		$ WORKS
+	********************************************************************* -->
 	<div class="grid-container u-margin-top-30">
 		<div class="grid-100">
 			<p class="home-title">OBRAS DESTACADAS DE LA SEMANA</p>
@@ -183,7 +236,9 @@
 	</div>
 
 
-	<!-- GRAY MESSAGE -->
+	<!-- ********************************************************************
+		$ GRAY MESSAGE
+	********************************************************************* -->
 	<div class="home-gray-message u-margin-top-60 u-padding-top-40 u-padding-bottom-40">
 		<div class="grid-container">
 			<div class="grid-100">
