--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -64,8 +64,8 @@ white = #fff
 	$ SLIDER
 *------------------------------------*/
 .slider
-	max-width 600px
-	margin auto
+	// max-width 600px
+	// margin auto
 	&-nav
 		display flex
 		justify-content center
@@ -114,6 +114,44 @@ white = #fff
 		display none
 	.slider-large
 		display block
+
+
+
+/*------------------------------------*
+	$ HOME GRID
+*------------------------------------*/
+
+.home-grid
+	display flex
+	justify-content center
+	&-element
+		margin 20px 10px
+		display block
+		position relative
+		.cover
+			position absolute
+			height 100%
+			width 100%
+			&:hover
+				background rgba(black, .15)
+				transition background .35s
+	&-column
+		&.tablet
+			display none
+		&.desktop
+			display none
+
+@media (min-width: 600px)
+	.home-grid
+		&-column
+			&.tablet
+				display block
+
+@media (min-width: 1000px)
+	.home-grid
+		&-column
+			&.desktop
+				display block
 
 body
 	overflow-x hidden
@@ -457,7 +495,7 @@ body
 				line-height 1.25
 				text-shadow 0px 2px 4px rgba(black, .5)
 			a
-				letter-spacing 1.5px
+				letter-spacing 2px
 				background #277cea
 				color white
 				font-size 10px
@@ -2757,6 +2795,14 @@ body
 		display flex
 		background-size: cover;
 		background-position: center center;
+		position relative
+		.cover
+			position absolute
+			height 100%
+			width 100%
+			&:hover
+				background rgba(black, .15)
+				transition background .35s
 		p
 			margin auto
 
