--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -41,10 +41,10 @@
 					<input class="input" type="text" name='username' value="{{user.username}}" required placeholder="Ingresa tu usuario"/>
 				</div>
 
-				<div class="grid-100">
+				<!-- <div class="grid-100">
 					<p class="title">Nombre a mostrar publicamente</p>
 					<input class="input" type="text" value="" name='lastname' required placeholder="Ingresa tu nombre como artista o pseudónimo"/>
-				</div>
+				</div> -->
 
 				<div class="grid-50 mobile-grid-100">
 					<p class="title">Genero</p>
