--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -85,17 +85,13 @@
 			<p class="profile-title">Sobre el artista</p>
 			<p class="profile-desc">{{profile.biography}}</p>
 			<div class="profile-desc u-margin-top-20">
-<!-- 				<a href="{{profile.facebook}}"><i class="bi_logo-facebook"></i></a>
-				<a href="{{profile.twitter}}"><i class="bi_logo-twitter"></i></a>
-				<a href="{{profile.instagram}}"><i class="bi_logo-instagram"></i></a> -->
-				<a href="{{profile.facebook}}"><i class="fa fa-facebook"></i></a>
-				<a href="{{profile.twitter}}"><i class="fa fa-twitter"></i></a>
-				<a href="{{profile.instagram}}"><i class="fa fa-instagram"></i></a>
-				<a href="{{profile.behance}}"><i class="fa fa-behance"></i></a>
-				<a href="{{profile.tumblr}}"><i class="fa fa-tumblr"></i></a>
-				<a href="{{profile.wordpress}}"><i class="fa fa-wordpress"></i></a>
-				<a href="{{profile.vimeo}}"><i class="fa fa-vimeo"></i></a>
-				<a href="{{profile.dribbble}}"><i class="fa fa-dribbble"></i></a>
+				{% if profile.facebook %} <a href="{{profile.facebook}}"><i class="fa fa-facebook"></i></a> {% endif %}
+				{% if profile.twitter %} <a href="{{profile.twitter}}"><i class="fa fa-twitter"></i></a> {% endif %}
+				{% if profile.behance %} <a href="{{profile.behance}}"><i class="fa fa-behance"></i></a> {% endif %}
+				{% if profile.tumblr %} <a href="{{profile.tumblr}}"><i class="fa fa-tumblr"></i></a> {% endif %}
+				{% if profile.wordpress %} <a href="{{profile.wordpress}}"><i class="fa fa-wordpress"></i></a> {% endif %}
+				{% if profile.vimeo %} <a href="{{profile.vimeo}}"><i class="fa fa-vimeo"></i></a> {% endif %}
+				{% if profile.dribble %} <a href="{{profile.dribble}}"><i class="fa fa-dribble"></i></a> {% endif %}
 			</div>
 		</div>
 		<div class="grid-100">
