--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -2860,3 +2860,59 @@ body
 		transform rotate(-180deg)
 	100%
 		transform rotate(-360deg)
+
+
+.empty-box
+	border-radius 4px
+	border solid 1px #9b9b9b
+	max-width 700px
+	margin auto
+	text-align center
+	display flex
+	&-column
+		>i
+			font-size 4em
+	&-column.left
+		flex 1
+		background #9b9b9b
+		padding 30px
+		.plus-container
+			background white
+			height 300px
+			width 100%
+			display flex
+			border dashed 2px #aaa
+			i
+				margin auto
+				font-size 6em
+	&-column.right
+		flex 2
+		padding 30px 30px
+
+	.title
+		font-family: 'Montserrat',sans-serif;
+		font-weight bold
+		color #0c0c0c
+		font-size 20px
+		line-height 1.25
+	.subtitle
+		font-family: 'Montserrat',sans-serif;
+		color #000
+		font-size 18px
+		line-height 1.25
+
+	a
+		font-family 'Montserrat', sans-serif !important
+		font-weight bold
+		font-size 10px
+		color #3a3d3f
+		// padding 15px 20px
+		padding 10px 20px
+		border-radius 4px
+		letter-spacing 2px
+		display inline-block
+		border solid 1px black
+		box-shadow 1px 2px 1px 0px rgba(black, 0.5)
+		i
+			font-size 1.5em
+			color #000
