--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -9,22 +9,25 @@
 		<div class="grid-100">
 			<section class="slider">
 				<div class="slider-items">
-					<!-- <div class="slider-item js-slide">
-						<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
-					</div> -->
-					<div class="slider-item js-slide"><img src="/img/slider/slider 1.png"></div>
+					<div class="slider-item js-slide" style="background-image: url('/img/slider/slider 1.png')">
+						<div class="slider-item-inner">
+							<p class="title">Tentacles Abound in Our Best Jellyfish Pictures</p>
+							<p class="subtitle u-padding-top-10">James Gurney picks the most interesting pieces from the luxury watch fair</p>
+						</div>
+					</div>
+					<!-- <div class="slider-item js-slide"><img src="/img/slider/slider 1.png"></div> -->
 					<!-- <div class="slider-item js-slide"><img src="/img/slide-large2.jpg"></div> -->
 					<!-- <div class="slider-item js-slide"><img src="/img/slide-large3.jpg"></div>
 					<div class="slider-item js-slide"><img src="/img/slide-large4.jpg"></div>
 					<div class="slider-item js-slide"><img src="/img/slide-large5.jpg"></div> -->
 				</div>
-				<!-- <div class="slider-nav">
+				<div class="slider-nav">
 					<i class="slider-nav-item js-slideNavItem active fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
 					<i class="slider-nav-item js-slideNavItem fa fa-circle"></i>
-				</div> -->
+				</div>
 			</section>
 		</div>
 	</div>
