--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -112,7 +112,7 @@
 	              <img src="{{element.User.photo}}">
 	            </a>
 	            <div>
-	            	<a href="#">
+								<a href="/user/{{element.User.username}}">
 		              <p class="u-padding-bottom-4 uppercase" style="font-weight: bold;">{{element.User.fullname}}</p>
 		              <p class="u-padding-bottom-7"> <strong></strong> {{element.User.city}}, {{element.User.country}}</p>
 	            	</a>
