--- a/app/views/user/account/password.html
+++ b/app/views/user/account/password.html
@@ -3,10 +3,10 @@
 	<div class="am-profile">
 
 		<div class="single-tabs" style="max-width: 580px; margin: auto;">
-		  <a href="http://localhost:3000/user/hanshavin/account" class="single-tab" style="padding: 10px;">
+		  <a href="/user/{{user.username}}/account/" class="single-tab" style="padding: 10px;">
 		    <p style="padding: 5px;">DATOS</p>
 		  </a>
-		  <a href="http://localhost:3000/user/hanshavin/account/password" class="single-tab selected" style="padding: 10px;">
+		  <a href="/user/{{user.username}}/account/password" class="single-tab selected" style="padding: 10px;">
 		    <p style="padding: 5px;">PASSWORD</p>
 		  </a>
 		</div>
